# DJangoPycharmRESTapi

./: README.md
IntuitInterview/: db.sqlite3  manage.py  pyproject.toml
IntuitInterview/IntuitInterview/: asgi.py  settings.py  urls.py  wsgi.py
IntuitInterview/api/: models.py  serializer.py  tests.py  urls.py  views.py
IntuitInterview/api/migrations/: 0001_initial.py
IntuitInterview/scripts/: read_csv.py
ReadCsv/: README.md  db.sqlite3  manage.py  pyproject.toml
ReadCsv/ReadCsv/: asgi.py  settings.py  urls.py  wsgi.py
ReadCsv/films/: models.py  pixar.csv  serializers.py  urls.py  views.py
ReadCsv/films/migrations/: 0001_initial.py
ReadCsv/scripts/: load_pixar.py
ReadCsvAndGET/: README.md  db.sqlite3  manage.py  pyproject.toml
ReadCsvAndGET/ReadCsvAndGET/: asgi.py  settings.py  urls.py  wsgi.py
ReadCsvAndGET/mywebapp/: models.py  mycsvfile.csv  serializer.py  tests.py  urls.py  views.py
ReadCsvAndGET/mywebapp/migrations/: 0001_initial.py
ReadCsvAndGET/scripts/: read_csv_file.py
film_app_django/: README.md  db.sqlite3  manage.py  pyproject.toml
film_app_django/film/: models.py  serializers.py  urls.py  views.py
film_app_django/film/migrations/: 0001_initial.py
film_app_django/film_app_django/: asgi.py  settings.py  urls.py  wsgi.py
readWriteUpdateDB/: README.md  db.sqlite3  manage.py  pyproject.toml
readWriteUpdateDB/readWriteUpdateDB/: asgi.py  settings.py  urls.py  wsgi.py
