[tool.poetry]
name = "readwriteupdatedb"
version = "0.1.0"
description = "To Connect MySQL DB, and create REST api with GET, POST, PUT command"
authors = ["Priyanka Khire <priyanka.khire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
